Trying to fix image issue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="left-half">
       <div class="top-content">
-        <img class="logo" src="/img/logo.png" alt="Charity Water Logo">
+        <img class="logo" src="img/logo.png" alt="Charity Water Logo">
         <div class="headline">Water is a Right<br />Not a Privilege</div>
       </div>
       <div class="bottom-content">
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="right-half">
-      <img src="/img/charityImage.png" alt="Charity Visual" class="hero-image">
+      <img src="img/charityImage.png" alt="Charity Visual" class="hero-image">
     </div>
   </div>
 </body>
